// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`flattenTaggedMessageContent should correctly combine strings, links and line breaks 1`] = `
Array [
  Object {
    "tag": "String",
    "value": "OneTwo",
  },
  Object {
    "tag": "Link",
    "text": "Three",
    "to": "FEATURE#Test",
  },
  Object {
    "tag": "String",
    "value": "Four",
  },
  Object {
    "tag": "LineBreak",
  },
  Object {
    "tag": "String",
    "value": "Five",
  },
]
`;

exports[`flattenTaggedMessageContent should correctly evaluate conditionals 1`] = `
Array [
  Object {
    "tag": "String",
    "value": "Show this, and this, and also this.",
  },
]
`;

exports[`flattenTaggedMessageContent should correctly expand after tag 1`] = `
Array [
  Object {
    "tag": "String",
    "value": "OneTwoThreeFour",
  },
]
`;

exports[`flattenTaggedMessageContent should correctly expand before tag 1`] = `
Array [
  Object {
    "tag": "String",
    "value": "OneTwoThreeFour",
  },
]
`;

exports[`flattenTaggedMessageContent should correctly expand replace tag 1`] = `
Array [
  Object {
    "tag": "String",
    "value": "OneTwoThree",
  },
]
`;

exports[`flattenTaggedMessageContent should correctly handle spacer adjoining linebreak 1`] = `
Array [
  Object {
    "tag": "String",
    "value": "OneTwo",
  },
  Object {
    "tag": "Link",
    "text": "Three",
    "to": "FEATURE#Test",
  },
  Object {
    "tag": "String",
    "value": "Four",
  },
  Object {
    "tag": "LineBreak",
  },
  Object {
    "tag": "String",
    "value": "Five",
  },
]
`;

exports[`flattenTaggedMessageContent should correctly handle spacer at beginning of message 1`] = `
Array [
  Object {
    "tag": "String",
    "value": "OneTwo",
  },
  Object {
    "tag": "Link",
    "text": "Three",
    "to": "FEATURE#Test",
  },
  Object {
    "tag": "String",
    "value": "Four",
  },
  Object {
    "tag": "LineBreak",
  },
  Object {
    "tag": "String",
    "value": "Five",
  },
]
`;

exports[`flattenTaggedMessageContent should correctly handle spacer at end of message 1`] = `
Array [
  Object {
    "tag": "String",
    "value": "OneTwo",
  },
  Object {
    "tag": "Link",
    "text": "Three",
    "to": "FEATURE#Test",
  },
  Object {
    "tag": "String",
    "value": "Four",
  },
  Object {
    "tag": "LineBreak",
  },
  Object {
    "tag": "String",
    "value": "Five",
  },
]
`;

exports[`flattenTaggedMessageContent should correctly handle spacer between links 1`] = `
Array [
  Object {
    "tag": "String",
    "value": "OneTwo",
  },
  Object {
    "tag": "Link",
    "text": "Three",
    "to": "FEATURE#Test",
  },
  Object {
    "tag": "String",
    "value": " ",
  },
  Object {
    "tag": "Link",
    "text": "Four",
    "to": "FEATURE#Test",
  },
  Object {
    "tag": "LineBreak",
  },
  Object {
    "tag": "String",
    "value": "Five",
  },
]
`;

exports[`flattenTaggedMessageContent should correctly handle spacer between strings 1`] = `
Array [
  Object {
    "tag": "String",
    "value": "One Two",
  },
  Object {
    "tag": "Link",
    "text": "Three",
    "to": "FEATURE#Test",
  },
  Object {
    "tag": "String",
    "value": "Four",
  },
  Object {
    "tag": "LineBreak",
  },
  Object {
    "tag": "String",
    "value": "Five",
  },
]
`;

exports[`flattenTaggedMessageContent should correctly ignore failing conditional trees 1`] = `
Array [
  Object {
    "tag": "String",
    "value": "Show, Also Show",
  },
]
`;
